--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build --base=./",
     "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "@types/victor": "^1.1.3",
+    "victor": "^1.1.0"
   }
 }
